horizontal overflow fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,4 +8,8 @@ $dark:black;
     margin:0 5%;
 }
 
+.container{
+    overflow: hidden;
+}
+
 @import "bulma";
